<resources>
    <string name="app_name">超限运输</string>
    <string name="login_logo_text">超限运输执法文书与信息管理系统</string>
    <string name="login_user">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_text">登录</string>
    <string name="home_text">首页</string>
    <string name="query_text">法律查询</string>
    <string name="info_text">信息统计表</string>
    <string name="setting_text">设置</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="mian_welcome">欢迎登入超限运输APP</string>
    <string name="overrun_punishment_editor">超限处罚编辑</string>
    <string name="driver_information">司机信息</string>
    <string name="driver_name">司机姓名</string>
    <string name="sex">性别：</string>
    <string name="sex_">性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="ID_number">身份证号</string>
    <string name="please_input">请输入...</string>
    <string name="please_input_or_select">请输入或选择...</string>
    <string name="input_ID_number">请输入身份证号或拍摄身份证</string>
    <string name="contact_number">联系电话</string>
    <string name="input_contact_number">请输入联系电话</string>
    <string name="contact_address">联系地址</string>
    <string name="input_contact_address">请输入联系地址</string>
    <string name="driving_license_address">驾驶证地址</string>
    <string name="input_driving_license_address">请输入驾驶证地址</string>
    <string name="driving_license_number">驾驶证号</string>
    <string name="input_driving_license_number">请输入驾驶证号</string>
    <string name="qualification_certificate_number">从业资格证号</string>
    <string name="input_qualification_certificate_number">请输入从业资格证号</string>
    <string name="unit_duty">单位职务</string>
    <string name="input_unit_duty">请输入单位职务</string>
    <string name="case_relation">案件关系</string>
    <string name="input_case_relation">请输入案件关系</string>
    <string name="party">当事人</string>
    <string name="occupation">职业</string>
    <string name="input_occupation">请输入职业</string>
    <string name="driver">驾驶员</string>
    <string name="Shoot_card">拍摄识别身份证</string>
    <string name="car_info">车辆信息</string>
    <string name="car_number">车辆号码</string>
    <string name="input_car_number">请输入车辆号码或拍摄车牌</string>
    <string name="listing_number">挂车号码</string>
    <string name="input_listing_number">请输入挂车号码</string>
    <string name="transfinite_number">超限证号</string>
    <string name="input_transfinite_number">请输入超限证号</string>
    <string name="operation_certificate_no">营运证号</string>
    <string name="input_operation_certificate_no">请输入营运证号</string>
    <string name="vehicle_owner">车辆所有人</string>
    <string name="input_vehicle_owner">请输入车辆所有人</string>
    <string name="all_address">所有人地址</string>
    <string name="input_all_address">请输入所有人地址</string>
    <string name="all_telephone">所有人电话</string>
    <string name="input_all_telephone">请输入所有人电话</string>
    <string name="Shoot_car_number">拍摄识别车辆号码</string>
    <string name="legal_representative">法人代表</string>
    <string name="input_legal_representative">请输入法人代表</string>
    <string name="legal_position">法人职务</string>
    <string name="input_legal_position">请输入法人职务</string>
    <string name="legal_name">法人名称</string>
    <string name="input_legal_name">请输入法人名称</string>
    <string name="legal_address">法人地址</string>
    <string name="input_legal_address">请输入法人地址</string>
    <string name="please_input_or_select_goods">请输入或选择货物名称...</string>
    <string name="cargo_information">货物信息</string>
    <string name="owner_name">货主姓名</string>
    <string name="owner_name1">货物装载地点</string>
    <string name="input_owner_name1">请输入货物装载地点</string>
    <string name="cargo_name">货物名称</string>
    <string name="input_cargo_name">请输入货物名称</string>
    <string name="owner_telephone">货主电话</string>
    <string name="departure_location">出发地点</string>
    <string name="input_departure_location">请输入出发地点</string>
    <string name="destination">目的地点</string>
    <string name="input_destination">请输入目的地点</string>
    <string name="input_ovrr">请输入超限证号</string>
    <string name="whether_disintegration">是否解体:</string>
    <string name="whether_disintegration_">是否解体</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="site_information">站点信息</string>
    <string name="road_name">公路名称</string>
    <string name="check_location">检查地点</string>
    <string name="input_check_location">请输入或选择检查地点...</string>
    <string name="transport_location">运输地点</string>
    <string name="next_step">下一步</string>
    <string name="last_step">上一步</string>
    <string name="complete">完成</string>
    <string name="axle_type">车轴类型</string>
    <string name="case_info">案件信息</string>
    <string name="filing_time">立案时间</string>
    <string name="select_filing_time">请选择立案时间</string>
    <string name="inquest_time">勘验时间</string>
    <string name="select_inquest_time">请选择勘验时间</string>
    <string name="select_inquest_end_time">请选择勘验结束时间</string>
    <string name="inquiry_time">询问时间</string>
    <string name="select_inquiry_time">请选择询问时间</string>
    <string name="select_inquiry_end_time">请选择询问结束时间</string>
    <string name="to">至</string>
    <string name="select_time">请选择时间</string>
    <string name="select_start_time">请选择开始时间</string>
    <string name="select_end_time">请选择结束时间</string>
    <string name="law_info">执法信息</string>
    <string name="law_person">执法人员</string>
    <string name="law_person1">执法人员1</string>
    <string name="law_person2">执法人员2</string>
    <string name="legal_person1">勘检人员1</string>
    <string name="legal_person2">勘检人员2</string>
    <string name="institutional_contact">机构联系人</string>
    <string name="detection_info">检测信息</string>
    <string name="car_type">车轴类型</string>
    <string name="input_car_type">请选择车轴类型</string>
    <string name="car_Weight">车重</string>
    <string name="input_car_Weight">请输入车重</string>
    <string name="length">长度</string>
    <string name="input_length">请输入长度</string>
    <string name="width">宽度</string>
    <string name="input_width">请输入宽度</string>
    <string name="height">高度</string>
    <string name="input_height">请输入高度</string>
    <string name="select_info">请选择信息</string>
    <string name="punish_info">处罚信息</string>
    <string name="source_cases">案件来源</string>
    <string name="input_source_cases">请输入或选择案件来源</string>
    <string name="penalty_amount">处罚金额</string>
    <string name="input_penalty_amount">请输入处罚金额</string>
    <string name="evidence_material">证据材料</string>
    <string name="input_evidence_material">请选择证据材料</string>
    <string name="add_evidence_material">证据材料录入</string>
    <string name="duty_time">责改日期</string>
    <string name="input_duty_time">请选择责改日期</string>
    <string name="is_closure">是否结案：</string>
    <string name="is_closure_">是否结案</string>
    <string name="is_organize">组织：</string>
    <string name="is_organize_">组织</string>
    <string name="tps_list">超限处罚列表</string>
    <string name="other_info">其它信息</string>
    <string name="evidence_name">证据名称</string>
    <string name="spec">规格</string>
    <string name="num">数量</string>
    <string name="meeting_minutes">会议纪要</string>
    <string name="discussed_time">讨论时间</string>
    <string name="host">主持人</string>
    <string name="reporting_person">汇报人</string>
    <string name="note_taker">记录人</string>
    <string name="present_staff">出席人员姓名及职务</string>
    <string name="consent">同意人</string>
    <string name="add_phone_text">添加照片及文字</string>
    <string name="text">文字</string>
    <string name="phone">照片</string>
    <string name="input_text">请输入文字</string>
    <string name="add_pic">添加照片</string>
    <string name="question">问题</string>
    <string name="answer">回答</string>
    <string name="wait_check">待复核</string>
    <string name="check">复核</string>
    <string name="check_state">审核状态：</string>
    <string name="check_state_">审核状态</string>
    <string name="input_check_state_">请选择审核状态</string>
    <string name="adopt">通过</string>
    <string name="reject">驳回</string>
    <string name="reject_Reason">驳回理由</string>
    <string name="input_reject_Reason">请输入驳回理由</string>
    <string name="work_day">工作日安排</string>
    <string name="work">工作日</string>
    <string name="work_day_add">工作日安排录入</string>
    <string name="state">状态</string>
    <string name="enable">启用</string>
    <string name="frozen">冻结</string>
    <string name="close">关闭</string>
    <string name="default_problem">默认问题</string>
    <string name="default_problem_code">默认问题编号</string>
    <string name="input_default_problem_code">请输入默认问题编号</string>
    <string name="default_problem_name">默认问题名称</string>
    <string name="input_default_problem_name">请输入默认问题名称</string>
    <string name="default_pic_name_code">默认图片名称编号</string>
    <string name="input_default_pic_name_code">请输入默认图片名称编号</string>
    <string name="default_pic_name">默认图片名称</string>
    <string name="input_default_pic_name">请输入默认图片名称</string>
    <string name="remark">备注</string>
    <string name="input_remark">请输入备注</string>
    <string name="legal_names">法律名称</string>
    <string name="input_legal_names">请输入法律名称</string>
    <string name="legal_name_code">法律名称编号</string>
    <string name="input_legal_name_code">请输入法律名称编号</string>
    <string name="law_infos">法条信息</string>
    <string name="car_types">车型信息</string>
    <string name="word">word模版</string>
    <string name="legal_n1">法律条</string>
    <string name="input_legal_n1">请输入法律条</string>
    <string name="legal_n2">法律款</string>
    <string name="input_legal_n2">请输入法律款</string>
    <string name="legal_n3">法律项</string>
    <string name="input_legal_n3">请输入法律项</string>
    <string name="seq">顺序号</string>
    <string name="input_seq">请输入顺序号</string>
    <string name="suffix">后缀</string>
    <string name="input_suffix">请输入后缀</string>
    <string name="template_manage">模版管理</string>
    <string name="wenshu">生成文书</string>
    <string name="name">名称</string>
    <string name="upload_file">上传文件</string>
    <string name="upload_template">上传模版</string>
    <string name="car_type_">车型</string>
    <string name="input_car_type_">请输入车型</string>
    <string name="axis_num">轴数</string>
    <string name="input_axis_num">请输入轴数</string>
    <string name="wheel_num">轮数</string>
    <string name="input_wheel_num">请输入轮数</string>
    <string name="limit">总质量限值</string>
    <string name="input_limit">请输入总质量限值</string>
    <string name="car_icon">车型图标</string>
    <string name="add_car_icon">添加图标</string>
    <string name="overload_data">治超数据信息统计表</string>
    <string name="detection_vehicle">检测车辆(辆)</string>
    <string name="overrun_vehicle">超限车辆(辆)</string>
    <string name="management_vehicle">处置超限车(辆)</string>
    <string name="escape_vehicle">逃逸(辆)</string>
    <string name="administrative_punishment">路政处罚情况</string>
    <string name="punish">处罚(辆)</string>
    <string name="fine">罚款(元)</string>
    <string name="uninstall1">卸载(辆)</string>
    <string name="uninstall2">卸载(吨)</string>
    <string name="to_return">劝返(辆)</string>
    <string name="re_licensing">补办许可(辆)</string>
    <string name="vehicle_handover">车辆移交情况</string>
    <string name="interprovincial_handover">省际移交(辆)</string>
    <string name="traffic_police">移交交警(辆)</string>
    <string name="traffic_place">移交地方(辆)</string>
    <string name="traffic_police_fine">移交交警罚款(元)</string>
    <string name="traffic_police_penalty">移交交警罚分(分)</string>
    <string name="traffic_place_penalty">移交地方罚分(元)</string>
    <string name="propaganda">宣传活动</string>
    <string name="propagandas">宣传活动(次)</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="edit_pwd">修改密码</string>
    <string name="old_pwd">旧密码</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="re_new_pwd">确认新密码</string>
    <string name="input_re_new_pwd">请重新输入新密码</string>
    <string name="search">搜索</string>
    <string name="code">编号</string>
    <string name="input_code">请输入编号</string>
</resources>