<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_work_day_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray2"
    tools:context="com.android.hcbd.overruntransportation.ui.activity.WorkDayAddActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/tab_bar_color_current">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/selector_back_bg"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:text="@string/search"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@drawable/shape_query_search_bg"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="7dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:maxWidth="80dp"
            android:layout_marginRight="15dp"/>
        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_code"
            android:textSize="12sp"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@drawable/shape_query_search_bg"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cargo_name"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:maxWidth="80dp"
            android:layout_marginRight="15dp"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_cargo_name"
            android:textSize="12sp"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@drawable/shape_query_search_bg"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_state_"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:id="@+id/tv_check_state"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_check_state_"
            android:textSize="12sp"
            android:gravity="center_vertical"/>
        <ImageView
            android:id="@+id/iv_check_state"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_input_down"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@drawable/shape_query_search_bg"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/select_start_time"
            android:textSize="12sp"
            android:gravity="center_vertical"/>
        <ImageView
            android:id="@+id/iv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_input_down"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@drawable/shape_query_search_bg"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/select_end_time"
            android:textSize="12sp"
            android:gravity="center_vertical"/>
        <ImageView
            android:id="@+id/iv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_input_down"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/shape_button_bg"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"/>


</LinearLayout>
